[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "santas_bag"
version = "0.6.0"
description = "Common utilities for Advent of Code"
authors = [
    { name = "Steve Marek-Loew", email = "loew.technology@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
addopts = "--cov=santas_bag --cov-report=term-missing"